k8s/base/apps/catalog-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: catalog-api
  labels:
    name: catalog-api
