k8s/base/apps/catalog-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-api
  namespace: catalog-api
  labels:
    app: catalog-api
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 3
      maxSurge: 2
  selector:
    matchLabels:
      app: catalog-api
  template:
    metadata:
      labels:
        app: catalog-api
        azure.workload.identity/use: 'true'
    spec:
      serviceAccountName: catalog-api
      nodeSelector:
        workload: apps
      tolerations:
        - key: 'workload'
          operator: 'Equal'
          value: 'apps'
          effect: 'NoSchedule'
      containers:
        - name: catalog-api
          image: trenchacrcoredev.azurecr.io/catalog-api:v1
          ports:
            - containerPort: 4101
              name: http-port
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 4101
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 4101
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: '64Mi'
              cpu: '50m'
            limits:
              memory: '128Mi'
              cpu: '250m'
