k8s/base/apps/catalog-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-api-ingress
  namespace: catalog-api
spec:
  ingressClassName: nginx
  rules:
    - host: catalog-api.continuecode.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catalog-api
                port:
                  number: 80
